== 0.9.3 2008-04-10
 - Close file handles on exec.
     Skynet::Worker and Skynet::Manager now call Skynet.fork_and_exec instead of their own versions.
     Skynet.fork_and_exec prevents file descriptor exhaustion by calling Skynet.close_file_handles.
     Skynet::Manager detatches from console by calling Skynet.close_console
 - Added printlog logging method which always prints to the log as [LOG]
 - Deprecated Skynet.new to Skynet.start 
 - Mysql Message Queue Adapter - Make delete_expired_messages much safer.
 - ActiveRecord::Base.distributed_find - Patch submitted by Lourens Naude (lourens@methodmissing.com) which checks the model for the primary_key name as opposed to assuming it is
  'id'
 - We don't want to use rails constantize so I've temporarily borrowed the method from ActiveSupport inflector and added it to skynet_ruby_extensions.
 - Fix bug in Job comment where it referenced MapreduceTest instead of Skynet::MapreduceTest 
 - Fix tests. For some reason you still can't run ALL the test at once with rake test, but if the files are run individually they all pass.

== 0.9.2 2008-01-22
Highlights: 
 - Multiple Message Queues
 - Many more Job options including options to control how jobs are distributed.
 - The various options for how a job is run has been made much clearer.
 - The Mysql Message Queue Adapter has been optimized and made more reliable.
 - You can now control how many times skynet retries failed master, map and reduce tasks.
 - Large data sets can now be streamed to the queue.

Details:

Active::Record#distributed_find
  - Active Record distributed_find now handles REALLY large sets by breaking them into seperate jobs. 1MM models per master broken into ranges of 1000.

Skynet::Job
  - code path through Skynet::Job is now clear. There are 3 ways to run Skynet::Job. Local Master (default), Remote Master, Async (implies remote master)
  - Skynet::Job supports keep_map_tasks and keep_reduce_tasks settings.  